W-17605265: Improve coverage (#303)
Signed-off-by: Alejandro Iannucci <4360246+aiannucci@users.noreply.github.com>